; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_send_routing_response.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_server.c_send_routing_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@TCP_PACKET_ROUTING_RESPONSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*)* @send_routing_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_routing_response(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %10 = add nsw i32 2, %9
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %7, align 8
  %13 = alloca i32, i64 %11, align 16
  store i64 %11, i64* %8, align 8
  %14 = load i32, i32* @TCP_PACKET_ROUTING_RESPONSE, align 4
  %15 = getelementptr inbounds i32, i32* %13, i64 0
  store i32 %14, i32* %15, align 16
  %16 = load i32, i32* %5, align 4
  %17 = getelementptr inbounds i32, i32* %13, i64 1
  store i32 %16, i32* %17, align 4
  %18 = getelementptr inbounds i32, i32* %13, i64 2
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %21 = call i32 @memcpy(i32* %18, i32* %19, i32 %20)
  %22 = load i32*, i32** %4, align 8
  %23 = mul nuw i64 4, %11
  %24 = trunc i64 %23 to i32
  %25 = call i32 @write_packet_TCP_secure_connection(i32* %22, i32* %13, i32 %24, i32 1)
  %26 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %26)
  ret i32 %25
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @write_packet_TCP_secure_connection(i32*, i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
